[package]
name = "meme-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = "1.0.0"

[dependencies.sqlx]
version = "=0.8"
features = [
    "postgres",
    "uuid",
    "chrono",
    "runtime-tokio",
]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
